# boilerplate

./: CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
boilerplate-macros/: Cargo.toml
boilerplate-macros/src/: boilerplate.rs  lib.rs  template.rs  token.rs
crates/boilerplate-macros/: Cargo.toml
crates/boilerplate-macros/src/: body.rs  boilerplate.rs  implementation.rs  lib.rs  source.rs  template.rs  token.rs
crates/boilerplate-parser/: Cargo.toml
crates/boilerplate-parser/src/: block.rs  error.rs  lib.rs  token.rs
crates/boilerplate-tests/: Cargo.toml
crates/boilerplate-tests/src/: lib.rs
crates/html-escaper/: Cargo.toml
crates/html-escaper/src/: lib.rs
crates/update-contributors/: Cargo.toml
doc/: boilerplate.txt  test.vim
html-escaper/: Cargo.toml
html-escaper/src/: lib.rs
lua/: boilerplate.lua
plugin/: boilerplate.vim
src/: block.rs  boilerplate.rs  display.rs  escape.rs  filename_from_ident.rs  format.rs  formatter.rs  lib.rs  reload.rs  source.rs  template.rs  trusted.rs
templates/: code-line.html  code.html  escape.html  interpolation-line-multiple-statements.html  interpolation-line.html  interpolation-multiple-statements.html  interpolation.html  match.html  quick-start.txt
test/: highlight.vim
tests/: integration.rs  lib.rs
vim/syntax/: boilerplate.vim
vim/test/: demo.html  highlight.vim
