[package]
name = "boilerplate"
version = "1.0.1"
license = "CC0-1.0"
edition = "2021"
description = "Minimal compile-time Rust template engine"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
homepage = "https://github.com/casey/boilerplate"
repository = "https://github.com/casey/boilerplate"
categories = ["template-engine", "no-std"]

[dependencies]
boilerplate-macros = { version = "0.0.0", path = "boilerplate-macros" }

[dev-dependencies]
html-escaper = { path = "html-escaper" }

[workspace]
members = [".", "boilerplate-macros", "html-escaper"]
