[package]
name = "boilerplate"
version = "1.0.1"
description = "Minimal compile-time Rust template engine"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
categories = ["template-engine", "no-std"]
edition = "2021"
homepage = "https://github.com/casey/boilerplate"
license = "CC0-1.0"
repository = "https://github.com/casey/boilerplate"

[dependencies]
boilerplate-macros = { version = "0.0.0", path = "crates/boilerplate-macros" }
boilerplate-parser = { version = "0.0.0", path = "crates/boilerplate-parser" }

[dev-dependencies]
axum = "0.8.7"
html-escaper = { path = "crates/html-escaper" }

[features]
axum = ["boilerplate-macros/axum"]
reload = ["boilerplate-macros/reload"]

[workspace]
members = [".", "crates/*"]
