[package]
name = "boilerplate"
version = "1.1.0"
description = "Minimal compile-time Rust template engine"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
boilerplate-macros = { version = "0.0.0", path = "crates/boilerplate-macros" }
boilerplate-parser = { version = "0.0.0", path = "crates/boilerplate-parser", optional = true }

[dev-dependencies]
axum = "0.8.7"

[features]
axum = ["boilerplate-macros/axum"]
reload = [
  "boilerplate-macros/reload",
  "boilerplate-parser/reload",
  "dep:boilerplate-parser",
]

[lints]
workspace = true

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
pretty_assertions = "1.0.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"
needless-pass-by-value = "allow"
pedantic = { level = "deny", priority = -1 }
too-many-lines = "allow"
wildcard-imports = "allow"

[workspace.lints.rust]
mismatched-lifetime-syntaxes = "allow"

[workspace.package]
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
categories = ["template-engine", "no-std"]
edition = "2021"
homepage = "https://github.com/casey/boilerplate"
license = "CC0-1.0"
repository = "https://github.com/casey/boilerplate"
