[package]
name = "boilerplate-macros"
version = "0.0.0"
description = "Minimal compile-time Rust template engine macros"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
mime = "0.3.17"
new_mime_guess = "4.0.1"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.0.0"
unindent = "0.2.3"

[features]
axum = []
