[package]
name = "boilerplate-tests"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
boilerplate = { path = "../../" }

[lints]
workspace = true
